2011-08-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/MarkerGenerator.java (addMarker):
	Add all attributes using the attribute map.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParser.java:
	Small cleanups.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsProblemMarkerInfo.java:
	Use attribute setter and getter.
	(getProblemType): New.
	(getLibraryInfo): New.
	(mySetType): New.
	(mySetAttribute): New.
	(myGetAttribute): New.
	(myGetAttributes): New.
	* plugin.xml: Set AutoconfErrorParser name and id.

2011-08-16  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 1.0.2.
	* pom.xml: Ditto.

2011-07-25  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves: bug#351660
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (addMakeTargetsToManager):
	Fix to set MakeTargets to a single dummy target with invalid name to avoid MakeTargetManager from trying
	to send out extraneous change event. 

2011-07-20  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves: bug#351660
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (addMakeTargetsToManager): 
	Fix to always create a new MakeTarget rather than finding an existing one so that
	modifications made do not result in events being sent to project/workspace.

2011-07-14  Sami Wagiaalla  <swagiaal@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/MarkerGenerator.java (addMarker):
	Use argument problemMarkerInfo.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParserManager.java (addProblemMarker):
	New method.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParser.java:
	Implement IErrorParser.
	(ErrorParser): New no argument constructor.
	Remove epm instance variable.
	Add project instance variable.
	(processLine): New.
	(processLine): Use addProblemMarker.